--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     username: root
     password: 123456
-    url: jdbc:mysql://localhost:3306/enterprise_netdisc?useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=Asia/Shanghai
     druid:
       initial-size: 20
       max-active: 30
